--- a/MEAN/Advanced/Dojo Query/DojoQuery.html
+++ b/MEAN/Advanced/Dojo Query/DojoQuery.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Dojo Query</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="dojo.js"></script>
     </head>
     <body>
         <p id="text1">The ability to click on an HTML element with a specific id.</p>
@@ -13,9 +14,9 @@
         
 
         <script>
-            $(document).ready(function(){
-                $("#text1").click(function() { console.log("The button was clicked!") });
-                $("#text2").hover(function() { console.log("The button was hovered on!") }); 
+           $(document).ready(function(){
+                $Dojo("text1").click(function() { console.log("The button was clicked!") });
+                $Dojo("text2").hover(function() { console.log("The button was hovered on!") });
             })
         </script>
     </body>
